Finish updating the schedule form
Clean up the look and proportions. Clean up the css code for this
section. Finish adding new ui widgets for better user experience.
Add help text.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,3 +8,15 @@ en:
   date:
     formats:
       default: "%D"
+  simple_form:
+    labels:
+      schedule:
+        on_days: 'On days'
+        group: 'Type'
+        start_time: 'Shift starts'
+        end_time: 'Shift ends'
+    hints:
+      schedule:
+    placeholders:
+      schedule:
+        end_date: 'Pick a date'
