--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,12 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
+  time:
+    formats:
+      default: "%-I:%M %P"
+  date:
+    formats:
+      default: "%D"
   simple_form:
     labels:
       schedule:
